fix dark mode button bug

--- a/src/Styles/DarkMode.css
+++ b/src/Styles/DarkMode.css
@@ -1,3 +1,8 @@
+.darkMode{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .darkModeSwitch {
     margin-top: 0px;
     margin-left: 10px;
@@ -5,21 +10,21 @@
 }
 
 .darkModeIcon {
-    transform: scale(0.75);
+    transform: translate(0px, 3px) scale(0.85);
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--body_background);
-    transition: 0.2s ease-in-out;
+
 }
 
 .lightModeIcon {
-    transform: scale(0.75);
+    transform: translate(-0.1px, 3px) scale(0.85);
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--color);
-    transition: 0.2s ease-in-out;
+
 }
 
 /*
